Fixed layout issues on laptop

--- a/src/index.scss
+++ b/src/index.scss
@@ -196,7 +196,7 @@ body {
     flex-grow: 1;
 
     .landing-page {
-      margin-top: 4rem;
+      margin-top: 1rem;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -264,11 +264,11 @@ body {
     }
     @media (min-width: $laptop) {
       .landing-page {
+        margin-top: 0;
         flex-direction: row;
         max-width: 55rem;
         height: 100dvh;
         align-items: center;
-        margin-top: 0;
         gap: 4rem;
 
         .landing-page_container {
@@ -303,6 +303,13 @@ body {
         }
       }
     }
+
+    @media (max-height: 600px) {
+      .landing-page {
+        margin-top: 5rem;
+      }
+    }
+
     @media (min-width: $desktop) {
       .landing-page {
         width: auto;
